done build swagger sample api
