# routers/index.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const router = express.Router();
 
-router.use(`/user`, require(`./user`));
+router.use('/user', require(`./user`));
 
 module.exports = router;
