# routers/user.js
@@ -1,6 +1,14 @@
 const router = require("express").Router();
-const { getAllUser } = require("../controllers/user");
+const {
+    getAllUser,
+    createUser,
+    updateUser,
+    deleteUser,
+} = require("../controllers/user.controller");
 
 router.route("/").get(getAllUser);
+router.route("/create").post(createUser);
+// router.route("/update/:id").patch(updateUser);
+// router.route("/delete/:id").delete(deleteUser);
 
 module.exports = router;
