# swagger.json
@@ -14,12 +14,61 @@
     "paths": {
         "/user": {
             "get": {
-                "summary": "get",
+                "summary": "Get all user & query user",
                 "tags": ["user"],
                 "operationId": "get",
                 "deprecated": false,
                 "produces": ["application/json"],
-                "parameters": [],
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int32",
+                        "description": ""
+                    },
+                    {
+                        "name": "creator_id",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int32",
+                        "description": ""
+                    },
+                    {
+                        "name": "role_id",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int32",
+                        "description": ""
+                    },
+                    {
+                        "name": "code",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int32",
+                        "description": ""
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int32",
+                        "description": ""
+                    },
+                    {
+                        "name": "phone",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int32",
+                        "description": ""
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
@@ -27,6 +76,170 @@
                 },
                 "security": []
             }
+        },
+        "/user/add": {
+            "post": {
+                "summary": "Create user",
+                "tags": ["user"],
+                "operationId": "create",
+                "deprecated": false,
+                "produces": ["application/json"],
+                "parameters": [
+                    {
+                        "name": "Body",
+                        "in": "body",
+                        "required": false,
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/adduser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "headers": {}
+                    }
+                },
+                "security": []
+            }
+        },
+        "/user/update/{user_id}": {
+            "patch": {
+                "summary": "Update user",
+                "tags": ["user"],
+                "operationId": "Patchupdate",
+                "deprecated": false,
+                "produces": ["application/json"],
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "path",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int32",
+                        "description": ""
+                    },
+                    {
+                        "name": "Body",
+                        "in": "body",
+                        "required": false,
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/updateuser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "headers": {}
+                    }
+                },
+                "security": []
+            }
+        },
+        "/user/delete/{user_id}": {
+            "delete": {
+                "summary": "Delete user",
+                "tags": ["user"],
+                "operationId": "delete",
+                "deprecated": false,
+                "produces": ["application/json"],
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "path",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int32",
+                        "description": ""
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "headers": {}
+                    }
+                },
+                "security": []
+            }
+        }
+    },
+    "definitions": {
+        "adduser": {
+            "title": "adduser",
+            "example": {
+                "username": "HuuCao",
+                "password": "admin",
+                "mail": "caominhhuu2108@gmail.com",
+                "phone": "0798012416",
+                "first_name": "Huu",
+                "last_name": "Cao",
+                "age": 23,
+                "is_active": true
+            },
+            "type": "object",
+            "properties": {
+                "username": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "mail": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "age": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
+                }
+            },
+            "required": ["username", "password", "mail", "phone"]
+        },
+        "updateuser": {
+            "title": "updateuser",
+            "example": {
+                "username": "HuuCao",
+                "mail": "caominhhuu2108@gmail.com",
+                "phone": "0798012416",
+                "first_name": "Huu",
+                "last_name": "Cao",
+                "age": 23
+            },
+            "type": "object",
+            "properties": {
+                "username": {
+                    "type": "string"
+                },
+                "mail": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "age": {
+                    "type": "integer"
+                }
+            },
+            "required": ["username", "password", "mail", "phone"]
         }
     }
 }
